Add telegram integration
